--- a/Assignment3/Assignment3.html
+++ b/Assignment3/Assignment3.html
@@ -12,36 +12,86 @@
     <title>Assignment3</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <!-- nav bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark pb-3 pt-3">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Name</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contacts</a>
-            </li>
-          </ul>
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">NaqiTec</a>
         </div>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="me-3">
+            <a href="#" class="text-white text-decoration-none">Home</a>
+          </li>
+          <li class="me-3">
+            <a href="#" class="text-white text-decoration-none">About</a>
+          </li>
+          <li class="me-3">
+            <a href="#" class="text-white text-decoration-none">Contacts</a>
+          </li>
+        </ul>
       </div>
     </nav>
+    <!-- nav bar end here -->
+    <!-- cards -->
+    <div class="container mt-5">
+      <h2 class="text-center mb-4">Catagries</h2>
+      <div class="d-flex container-row justify-content-center">
+        <!-- card1 -->
+        <div class="col-md-4 me-3">
+          <div class="card h-100">
+            <img
+              src="/Assignment3/imges/modern-stationary-collection-arrangement.jpg"
+              alt="Card 1"
+              class="card-img-top h-100"
+            />
+          </div>
+        </div>
+        <!-- card2 -->
+        <div class="col-md-4 me-3">
+          <div class="card h-60">
+            <img
+              src="/Assignment3/imges/modern-stationary-collection-arrangement (1).jpg"
+              alt="Card 2"
+              class="card-img-top h-60"
+            />
+          </div>
+        </div>
+        <!-- card3 -->
+        <div class="col-md-4 me-3">
+          <div class="card h-100">
+            <img
+              src="/Assignment3/imges/modern-stationary-collection-arrangement (2).jpg"
+              alt="Card 3"
+              class="card-img-top h-100"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- cards end here -->
+
+    <!-- imge container -->
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="/Assignment3/imges/4264977_91352.jpg"
+            alt="Image"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-md-6">
+          <p class="h2">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem
+            est consequuntur ipsa ipsam voluptatum dolore officiis sed fugiat
+            quisquam voluptatibus eligendi, libero iusto perferendis, quam
+            molestias cupiditate veritatis delectus deleniti! Saepe minima
+            suscipit, a dolore iure illo deleniti voluptates corporis mollitia
+            soluta aliquam.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- imge container ends -->
   </body>
 </html>
